reports for orders, income

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=base64:7DIpKUUDVUsWAC1RCifjTrnrVK4xe1ZVJd5aPEyeHeY=
 APP_DEBUG=true
 APP_URL=http://localhost/public/clients/aissa/1.1.D/public/
+APP_CURRENCY=USD
 
 LOG_CHANNEL=stack
 
